# resolve

./: .gitignore  README.md
.github/workflows/: control-plane-checks.yml
apps/dashboard/: .env.example  README.md  middleware.ts  package.json
apps/dashboard/app/: globals.css  layout.tsx  manifest.ts  mobile.css  page.tsx
apps/dashboard/components/: ApprovalBanners.tsx  ApprovalInbox.tsx  ArtifactsDock.tsx  ChatStrip.tsx  CommandCore.tsx  Constellation.tsx  LocalExecToggle.tsx  MissionRail.tsx  Sidebar.tsx  Starfield.tsx  Timeline.tsx  Vitals.tsx  (+3 more)
apps/desktop/: README.md  adhocSign.js  main.js  package-lock.json  package.json
apps/local-worker/: .gitignore  README.md  package.json  worker.mjs
apps/mobile/: .gitignore  README.md  capacitor.config.json  capacitor.config.ts  package-lock.json  package.json
config/: connectors.json  model_routes.json  tool_policies.json
docs/: DIRECTION.md  JARVIS_SYSTEM_PLAN.md
infra/: .env.example  docker-compose.yml
infra/postgres/: 001_control_plane.sql  002_simplefin.sql
services/control_plane/: Dockerfile  README.md  pyproject.toml
services/control_plane/src/resolve_control_plane/: __init__.py  api.py  artifacts.py  assistant.py  audit.py  bus.py  config.py  costs.py  domain.py  executor.py  health.py  ingest.py  local.py  msgutil.py  policy.py  routines.py  sites.py  store.py  tools_def.py  worker.py
services/control_plane/src/resolve_control_plane/connectors/: __init__.py  composio.py  gcal.py  gmail_imap.py  local_llm.py  notion_api.py  simplefin.py  telegram_notify.py  vault_github.py
services/control_plane/tests/: test_audit.py  test_domain.py  test_executor_reliability.py  test_review_fixes.py  test_routines_features.py  test_security.py  test_worker_watchdog.py
tools/wake-training/: README.md  build_wake.py
(+25 files in other folders)
